# htool

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  NOTES.md  NOTES.txt  README.md  TODO.md  TODO.txt  cmake-format.py  config.h.in  paper.bib  paper.md  setup.py
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  compression_comparison.cpp  compression_comparison.sh  create_with_numba.py  matthieu_s_smallest_example.py  smallest_example.cpp  smallest_example.py  smallest_example.sh  smallest_example_.py  smallest_example_hmatrix.py  smallest_example_multihmatrix.py  smallest_example_test.py  test_numba.py  use_clustering.cpp  use_clustering.sh  use_ddm_solver.cpp  use_ddm_solver.sh  use_distributed_operator.cpp  use_distributed_operator.sh  use_hmatrix.cpp  use_hmatrix.sh  visucluster.cpp  visuclusters.sh
src/: CMakeLists.txt  comparison_hmat.cpp  comparison_sparse.cpp  compress.cpp  err_decrease.cpp  main_test.cpp  matrix_to_bytes.cpp  multi_compress.cpp  prog.cpp  test.cpp  test.hpp  test_ACA.cpp  test_freeglut.cpp  visucluster.cpp  visumatrix.cpp  visumesh.cpp
test/functional_tests/: CMakeLists.txt
test/functional_tests/SVD_tests/: CMakeLists.txt  SVD_tests.cpp
test/functional_tests/cluster_tests/: CMakeLists.txt  cluster_tests.cpp
test/functional_tests/fullACA_tests/: CMakeLists.txt  fullACA_tests.cpp
test/functional_tests/geometry_file_tests/: geometry_file_tests.cpp
test/functional_tests/hmat_SVD_tests/: CMakeLists.txt  hmat_SVD_tests.cpp
test/functional_tests/hmat_fullACA_tests/: CMakeLists.txt  hmat_fullACA_tests.cpp
test/functional_tests/hmat_partialACA_tests/: CMakeLists.txt
test/functional_tests/hmat_vec_prod_tests/: CMakeLists.txt  hmat_vec_prod_tests.cpp
test/functional_tests/hmatrix/: CMakeLists.txt  hmat_SVD_tests.cpp  hmat_fullACA_tests.cpp  hmat_partialACA_tests.cpp
test/functional_tests/hpddm_solve_tests/: CMakeLists.txt  hpddm_solve_tests.cpp
test/functional_tests/hpddm_tests/: CMakeLists.txt  hpddm_tests.cpp
test/functional_tests/lrmat/: CMakeLists.txt  lrmat_SVD_tests.cpp  lrmat_partialACA_tests.cpp
test/functional_tests/lrmat_SVD_tests/: CMakeLists.txt
test/functional_tests/lrmat_fullACA_tests/: CMakeLists.txt  lrmat_fullACA_tests.cpp
test/functional_tests/lrmat_partialACA_tests/: CMakeLists.txt
test/functional_tests/mat_vec_prod_tests/: CMakeLists.txt
test/functional_tests/matrix_file_tests/: CMakeLists.txt  matrix_file_tests.cpp
test/functional_tests/matrix_tests/: matrix_tests.cpp
test/functional_tests/partialACA_tests/: CMakeLists.txt  partialACA_tests.cpp
test/functional_tests/point_tests/: CMakeLists.txt  point_tests.cpp
test/functional_tests/vector_file_tests/: CMakeLists.txt
test/functional_tests/vector_tests/: CMakeLists.txt  vector_tests.cpp
test/integration_tests/ACA_tests/: ACA_tests.cpp  CMakeLists.txt
test/integration_tests/fullACA_tests/: CMakeLists.txt  fullACA_tests.cpp
test/integration_tests/hmat_fullACA_tests/: CMakeLists.txt
test/integration_tests/hmatrix_tests/: CMakeLists.txt  hmatrix_tests.cpp
test/integration_tests/matrix_tests/: CMakeLists.txt  matrix_tests.cpp
tests/functional_tests/: CMakeLists.txt
tests/functional_tests/basic_types/: CMakeLists.txt  test_basic_type_matrix_product.hpp  test_basic_types_matrix.cpp  test_basic_types_matrix_file.cpp  test_basic_types_point.cpp  test_basic_types_vector.cpp  test_basic_types_vector_file.cpp
tests/functional_tests/blocks/: CMakeLists.txt  test_blocks.hpp  test_blocks_RjasanowSteinbach.cpp  test_blocks_RjasanowSteinbach_symmetric.cpp  test_blocks_operations.hpp  test_blocks_operations_RjasanowSteinbach.cpp
tests/functional_tests/cluster/: CMakeLists.txt  test_cluster.cpp
tests/functional_tests/cluster_tests/: cluster_tests.cpp
tests/functional_tests/cluster_tree/: CMakeLists.txt  test_cluster_tree.cpp
tests/functional_tests/clustering/: CMakeLists.txt  test_cluster.cpp  test_cluster.hpp  test_cluster_DDM.hpp  test_cluster_DDM_geometric_splitting.cpp  test_cluster_DDM_regular_splitting.cpp  test_cluster_bounding_box_geometric_splitting.cpp  test_cluster_geometric_splitting.cpp  test_cluster_global.hpp  test_cluster_local.hpp  test_cluster_ncluster_geometric_splitting.cpp  test_cluster_ncluster_regular_splitting.cpp  test_cluster_pca_geometric_splitting.cpp  test_cluster_pca_regular_splitting.cpp  test_cluster_regular_splitting.cpp  test_cluster_tree.cpp
tests/functional_tests/distributed_operator/: CMakeLists.txt  test_distributed_operator.hpp  test_distributed_operator_mat_prod_complex_double.cpp  test_distributed_operator_mat_prod_double.cpp  test_distributed_operator_mat_prod_transp_complex_double.cpp  test_distributed_operator_mat_prod_transp_double.cpp  test_distributed_operator_product_complex_double.cpp  test_distributed_operator_product_double.cpp  test_distributed_operator_vec_prod_complex_double.cpp  test_distributed_operator_vec_prod_double.cpp  test_distributed_operator_vec_prod_transp_complex_double.cpp  test_distributed_operator_vec_prod_transp_double.cpp
tests/functional_tests/geometry/: CMakeLists.txt  test_geometry_file.cpp
tests/functional_tests/geometry_file_tests/: CMakeLists.txt
tests/functional_tests/hmatrix/: CMakeLists.txt  hmat_SVD_tests.cpp  test_hmat_SVD.cpp  test_hmat_cluster_SVD.cpp  test_hmat_cluster_fullACA.cpp  test_hmat_cluster_partialACA.cpp  test_hmat_fullACA.cpp  test_hmat_mat_prod.cpp  test_hmat_partialACA.cpp  test_hmat_vec_prod.cpp  test_hmatrix_build.hpp  test_hmatrix_builder.hpp  test_hmatrix_factorization.hpp  test_hmatrix_hmatrix_product.hpp  test_hmatrix_lrmat_product.hpp  test_hmatrix_matrix_product.hpp  test_hmatrix_product.hpp  test_hmatrix_task_based.hpp  test_hmatrix_triangular_solve.hpp  (+9 more)
tests/performance_tests/: CMakeLists.txt  hmat.hpp  hmat_complexity.sh  hmat_fullACA.cpp  hmat_geometric_splitting_fullACA.cpp  hmat_geometric_splitting_partialACA.cpp  hmat_partialACA.cpp  hmat_scaling.hpp  hmat_scaling.sh  hmat_scaling_fullACA.cpp  hmat_scaling_plot.py  launch_slurm.sh
(+564 files in other folders)
