# lrmat
add_subdirectory(lrmat_fullACA_tests)
add_subdirectory(lrmat_partialACA_tests)
add_subdirectory(lrmat_SVD_tests)

# Matrix
add_subdirectory(matrix_tests)
add_subdirectory(matrix_file_tests)

# Vector
add_subdirectory(vector_tests)
add_subdirectory(vector_file_tests)

# Hmatrix
add_subdirectory(hmat_vec_prod_tests)
add_subdirectory(hmat_SVD_tests)
add_subdirectory(hmat_fullACA_tests)
add_subdirectory(hmat_partialACA_tests)




add_subdirectory(point_tests)
add_subdirectory(cluster_tests)


add_subdirectory(geometry_file_tests)

add_subdirectory(hpddm_solve_tests)
