add_custom_target(build-Hmat_scaling)

add_executable(Hmat_scaling_fullACA hmat_scaling_fullACA.cpp)
target_link_libraries(Hmat_scaling_fullACA htool)
add_dependencies(build-Hmat_scaling Hmat_scaling_fullACA)

add_executable(Hmat_scaling_partialACA hmat_scaling_partialACA.cpp)
target_link_libraries(Hmat_scaling_partialACA htool)
add_dependencies(build-Hmat_scaling Hmat_scaling_partialACA)
