add_custom_target(build-performance-tests)

add_executable(Hmat_geometric_splitting_fullACA hmat_geometric_splitting_fullACA.cpp)
target_link_libraries(Hmat_geometric_splitting_fullACA htool)
add_dependencies(build-performance-tests Hmat_geometric_splitting_fullACA)

add_executable(Hmat_geometric_splitting_partialACA hmat_geometric_splitting_partialACA.cpp)
target_link_libraries(Hmat_geometric_splitting_partialACA htool)
add_dependencies(build-performance-tests Hmat_geometric_splitting_partialACA)
