#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Cluster_tests cluster_tests.cpp)
target_link_libraries(Cluster_tests htool)
