#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(FullACA_tests fullACA_tests.cpp)
target_link_libraries(FullACA_tests htool)
